<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.jboss.integration-platform</groupId>
    <artifactId>jboss-integration-platform-parent</artifactId>
    <version>6.0.0.CR14</version>
  </parent>

  <groupId>org.overlord</groupId>
  <artifactId>overlord-commons</artifactId>
  <version>3.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Overlord Commons</name>
  <description>Contains common/shared modules used across multiple Overlord projects.</description>
  <url>http://www.jboss.org/overlord</url>
  <inceptionYear>2013</inceptionYear>

  <organization>
    <name>JBoss, a division of Red Hat</name>
    <url>http://www.jboss.org</url>
  </organization>

  <licenses>
    <license>
      <name>Apache License Version 2.0</name>
      <url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
      <!--url>http://www.gnu.org/licenses/lgpl.html</url -->
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>jira</system>
    <url>http://issues.jboss.org/browse/SOAG</url>
  </issueManagement>

  <scm>
    <connection>scm:git:git@github.com:Governance/overlord-commons.git</connection>
    <developerConnection>scm:git:git@github.com:Governance/overlord-commons.git</developerConnection>
    <url>scm:git:git@github.com:Governance/overlord-commons.git</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <name>Kurt Stam</name>
      <id>kstam</id>
      <email>kstam@jboss.com</email>
      <organization>JBoss, a division of Red Hat</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <name>Randall Hauch</name>
      <id>randall</id>
      <email>rhauch@redhat.com</email>
      <organization>JBoss, a division of Red Hat</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <name>Eric Wittmann</name>
      <id>ewittman</id>
      <email>eric.wittmann@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <name>Brett Meyer</name>
      <id>brmeyer</id>
      <email>brmeyer@redhat.com</email>
      <organization>Red Hat</organization>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>

  <properties>
    <!-- Instruct the build to use only UTF-8 encoding for source code -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>

    <!-- Distribution URLs -->
    <jboss.releases.repo.url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</jboss.releases.repo.url>
    <jboss.snapshots.repo.url>https://repository.jboss.org/nexus/content/repositories/snapshots/</jboss.snapshots.repo.url>

    <!-- Third party libraries -->
    <version.jboss.dmr>1.2.0.Final</version.jboss.dmr>
    <version.jboss.as.controller>7.2.0.Final</version.jboss.as.controller>
    <version.org.apache.tomcat>7.0.47</version.org.apache.tomcat>
    <version.org.eclipse.jetty>8.1.9.v20130131</version.org.eclipse.jetty>
    <version.org.jboss.as>7.4.0.Final-redhat-19</version.org.jboss.as>
    <version.org.jboss.errai>2.4.4.Final</version.org.jboss.errai>
    <version.org.jboss.modules.jboss-modules>1.3.3.Final-redhat-1</version.org.jboss.modules.jboss-modules>
    <version.org.jboss.msc>1.1.5.Final-redhat-1</version.org.jboss.msc>
    <version.org.picketbox>4.0.19.SP4</version.org.picketbox>
    <version.jolokia>1.1.4</version.jolokia>
  </properties>

  <modules>
    <module>overlord-commons-ant</module>
    <module>overlord-commons-build</module>
    <module>overlord-commons-config</module>
    <module>overlord-commons-dev</module>
    <module>overlord-commons-gwt</module>
    <module>overlord-commons-i18n</module>
    <module>overlord-commons-maven-plugin</module>
    <module>overlord-commons-services</module>
    <module>overlord-commons-uiheader</module>
  </modules>

  <build>
    <!-- This section defines the default plugin settings inherited by child projects. -->
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>properties-maven-plugin</artifactId>
          <version>1.0-alpha-2</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!-- Specify the compiler options and settings -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <showDeprecation>false</showDeprecation>
          <showWarnings>false</showWarnings>
        </configuration>
      </plugin>
      <!-- Produce source jars during the 'verify' phase -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <includes>
            <include>**/*TestCase.java</include>
            <include>**/*Test.java</include>
          </includes>
          <systemProperties>
            <property>
              <name>java.io.tmpdir</name>
              <value>${basedir}/target</value>
            </property>
          </systemProperties>
          <argLine>-Xmx256M -XX:MaxPermSize=512m</argLine>
        </configuration>
      </plugin>
      <!-- Build a test-jar for each project, so that src/test/* resources and classes can be used in other projects. 
        Also customize how the jar files are assembled. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <id>test-jar</id>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <archive>
            <manifest>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Implementation-URL>${project.url}</Implementation-URL>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-victims-rule</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <rule implementation="com.redhat.victims.VictimsRule">
                  <metadata>warning</metadata>
                  <fingerprint>fatal</fingerprint>
                  <updates>${victims.updates}</updates>
                </rule>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>

      <!-- JBoss Libs -->
      <dependency>
        <groupId>org.jboss</groupId>
        <artifactId>jboss-dmr</artifactId>
        <version>${version.jboss.dmr}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.as</groupId>
        <artifactId>jboss-as-controller</artifactId>
        <version>${version.jboss.as.controller}</version>
      </dependency>

      <!-- Integration Platform Imports -->
      <dependency>
        <groupId>org.jboss.integration-platform</groupId>
        <artifactId>jboss-integration-platform-bom</artifactId>
        <version>6.0.0.CR14</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- JBoss AS -->
      <dependency>
        <groupId>org.jboss.as</groupId>
        <artifactId>jboss-as-security</artifactId>
        <version>${version.org.jboss.as}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.as</groupId>
        <artifactId>jboss-as-naming</artifactId>
        <version>${version.org.jboss.as}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.as</groupId>
        <artifactId>jboss-as-server</artifactId>
        <version>${version.org.jboss.as}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.msc</groupId>
        <artifactId>jboss-msc</artifactId>
        <version>${version.org.jboss.msc}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.modules</groupId>
        <artifactId>jboss-modules</artifactId>
        <version>${version.org.jboss.modules.jboss-modules}</version>
      </dependency>
      <dependency>
        <groupId>org.picketbox</groupId>
        <artifactId>jboss-security-spi</artifactId>
        <version>${version.org.picketbox}</version>
      </dependency>

      <!-- Tomcat -->
      <dependency>
        <groupId>org.apache.tomcat</groupId>
        <artifactId>tomcat-catalina</artifactId>
        <version>${version.org.apache.tomcat}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.tomcat</groupId>
        <artifactId>tomcat-coyote</artifactId>
        <version>${version.org.apache.tomcat}</version>
      </dependency>

      <!-- Jetty -->
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-server</artifactId>
        <version>${version.org.eclipse.jetty}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-plus</artifactId>
        <version>${version.org.eclipse.jetty}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-servlet</artifactId>
        <version>${version.org.eclipse.jetty}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-jsp</artifactId>
        <version>${version.org.eclipse.jetty}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-jndi</artifactId>
        <version>${version.org.eclipse.jetty}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-security</artifactId>
        <version>${version.org.eclipse.jetty}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-util</artifactId>
        <version>${version.org.eclipse.jetty}</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.errai.reflections</groupId>
        <artifactId>reflections</artifactId>
        <version>${version.org.jboss.errai}</version>
      </dependency>

      <!-- Internal dependencies -->
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>overlord-commons-ant</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>overlord-commons-services</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>overlord-commons-config</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-artifact</artifactId>
        <version>${version.org.apache.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-model-builder</artifactId>
        <version>${version.org.apache.maven}</version>
      </dependency>    
      <dependency>
        <groupId>org.jolokia</groupId>
        <artifactId>jolokia-client-java</artifactId>
        <version>${version.jolokia}</version>
      </dependency>
     </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- Common libraries -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
    </dependency>
  </dependencies>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${version.org.apache.maven.plugins}</version>
      </plugin>
    </plugins>
  </reporting>

  <repositories>
    <repository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/developer/</url>
      <layout>default</layout>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>
    <repository>
      <id>redhat-tech-preview-repository</id>
      <name>Red Hat Tech Preview Repository</name>
      <url>http://maven.repository.redhat.com/techpreview/all/</url>
      <layout>default</layout>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>http://repository.jboss.org/nexus/content/groups/developer/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>daily</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <distributionManagement>
    <repository>
      <id>jboss-releases-repository</id>
      <name>JBoss Releases Repository</name>
      <url>${jboss.releases.repo.url}</url>
    </repository>
    <snapshotRepository>
      <id>jboss-snapshots-repository</id>
      <name>JBoss Snapshots Repository</name>
      <url>${jboss.snapshots.repo.url}</url>
    </snapshotRepository>
  </distributionManagement>

</project>

